# Qv2ray

./: .gitmodules  AppImageBuilder.yml  CMakeLists.txt  README.md  resources.qrc
.github/: look.yml
.github/workflows/: build-qv2ray-cmake.yml  build-qv2ray-qt6.yml  build.yml  installer.yml  nsis.yml  test.yml
assets/: qv2ray.desktop  qvmessocket.desktop  qvmessocket.metainfo.xml
cmake/: backend.cmake  deployment.cmake  protobuf.cmake  qnodeeditor.cmake  qrencode.cmake  singleapplication.cmake  translations.cmake
cmake/components/: base.cmake  qv2ray-base.cmake  qv2ray-cli.cmake  qv2ray-ui-qml.cmake  ui-widget.cmake  ui.cmake
libs/: setup-libs.sh
src/: main.cpp
src/base/: Qv2rayBaseApplication.cpp  Qv2rayBaseApplication.hpp  Qv2rayLog.hpp  QvBase.hpp  QvBaseApplication.cpp  QvBaseApplication.hpp  QvFeatures.hpp  QvLog.hpp
src/base/models/: CoreObjectModels.hpp  QvComplexConfigModels.hpp  QvConfigIdentifier.hpp  QvCoreSettings.hpp  QvRuntimeConfig.hpp  QvSafeType.hpp  QvSettingsObject.hpp
src/components/geosite/: QvGeositeReader.cpp  QvGeositeReader.hpp
src/components/latency/: DNSBase.hpp  LatencyTest.cpp  LatencyTest.hpp  LatencyTestThread.cpp  LatencyTestThread.hpp  RealPing.cpp  RealPing.hpp  TCPing.cpp  TCPing.hpp
src/components/latency/unix/: ICMPPing.cpp  ICMPPing.hpp
src/components/latency/win/: ICMPPing.cpp  ICMPPing.hpp
src/components/ntp/: QvNTPClient.cpp  QvNTPClient.hpp
src/components/plugins/: QvPluginHost.cpp  QvPluginHost.hpp
src/components/port/: QvPortDetector.cpp  QvPortDetector.hpp
src/components/proxy/: QvProxyConfigurator.cpp  QvProxyConfigurator.hpp
src/components/route/: RouteSchemeIO.hpp
src/components/translations/: QvTranslator.cpp  QvTranslator.hpp
src/components/update/: UpdateChecker.cpp  UpdateChecker.hpp
src/core/: CoreUtils.cpp  CoreUtils.hpp
src/core/connection/: ConnectionIO.cpp  ConnectionIO.hpp  Generation.hpp  Serialization.cpp  Serialization.hpp
src/core/connection/generation/: filters.cpp  final.cpp  inbounds.cpp  misc.cpp  outbounds.cpp  routing.cpp
src/core/connection/serialization/: ss.cpp  ssd.cpp  vless.cpp  vmess.cpp  vmess_new.cpp
src/core/handler/: ConfigHandler.cpp  ConfigHandler.hpp  KernelInstanceHandler.cpp  KernelInstanceHandler.hpp  RouteHandler.cpp  RouteHandler.hpp
src/core/kernel/: APIBackend.cpp  APIBackend.hpp  KernelInteractions.cpp  KernelInteractions.hpp  QvKernelABIChecker.cpp  QvKernelABIChecker.hpp  V2RayKernelInteractions.cpp  V2RayKernelInteractions.hpp
src/core/settings/: SettingsBackend.cpp  SettingsBackend.hpp  SettingsUpgrade.cpp
src/plugins/common/: CommonTypes.hpp
src/plugins/protocols/: BuiltinProtocolPlugin.hpp  QvPlugin-BuiltinProtocolSupport.cmake
src/plugins/protocols/core/: OutboundHandler.cpp  OutboundHandler.hpp
src/plugins/protocols/ui/: Interface.hpp
src/plugins/subscription-adapters/: BuiltinSubscriptionAdapter.hpp
src/ui/: Qv2rayPlatformApplication.hpp  QvPlatformApplication.cpp  QvPlatformApplication.hpp
src/ui/cli/: Qv2rayCliApplication.cpp  Qv2rayCliApplication.hpp  QvCliApplication.cpp  QvCliApplication.hpp
src/ui/common/: LogHighlighter.cpp  LogHighlighter.hpp  QRCodeHelper.cpp  QRCodeHelper.hpp  QvMessageBus.hpp
src/ui/common/autolaunch/: QvAutoLaunch.cpp  QvAutoLaunch.hpp
src/ui/common/darkmode/: DarkmodeDetector.cpp  DarkmodeDetector.hpp
src/ui/common/speedchart/: speedwidget.cpp
src/ui/qml/: Qv2rayQMLApplication.hpp
src/ui/widgets/: Qv2rayWidgetApplication.cpp  Qv2rayWidgetApplication.hpp  QvWidgetApplication.cpp  QvWidgetApplication.hpp
src/ui/widgets/common/: WidgetUIBase.hpp
src/ui/widgets/editors/: w_ChainSha256Editor.hpp  w_InboundEditor.cpp  w_InboundEditor.hpp  w_JsonEditor.hpp  w_OutboundEditor.cpp  w_OutboundEditor.hpp  w_RoutesEditor.cpp  w_RoutesEditor.hpp  w_RoutesEditor.ui
src/ui/widgets/models/: ConnectionModelHelper.hpp
src/ui/widgets/node/: NodeBase.hpp  NodeDispatcher.cpp  NodeDispatcher.hpp
src/ui/widgets/node/models/: OutboundNodeModel.cpp  RuleNodeModel.cpp
src/ui/widgets/node/widgets/: BalancerWidget.cpp  ChainWidget.cpp  InboundOutboundWidget.cpp  RuleWidget.cpp  RuleWidget.hpp
src/ui/widgets/styles/: StyleManager.cpp  StyleManager.hpp
src/ui/widgets/widgets/: DnsSettingsWidget.cpp  DnsSettingsWidget.hpp  QvAutoCompleteTextEdit.cpp  QvAutoCompleteTextEdit.hpp  RouteSettingsMatrix.hpp  StreamSettingsWidget.cpp  StreamSettingsWidget.hpp
src/ui/widgets/widgets/complex/: RoutingEditorWidget.hpp
src/ui/widgets/windows/: w_GroupManager.cpp  w_GroupManager.hpp  w_ImportConfig.cpp  w_ImportConfig.hpp  w_MainWindow.cpp  w_MainWindow.hpp  w_MainWindow_extra.cpp  w_PluginManager.cpp  w_PluginManager.hpp  w_PreferencesWindow.cpp  w_PreferencesWindow.hpp  w_PreferencesWindow.ui  w_ScreenShot_Core.cpp
src/utils/: HTTPRequestHelper.cpp  HTTPRequestHelper.hpp  QvHelpers.cpp  QvHelpers.hpp
